syntax = "proto3";

package coolbeans.api.v1;

option go_package = ".;coolbeans_api_v1";

import "empty.proto";

// Service provides functionality to work with the cluster
service Cluster {
    // Join, allows a calling node to make a request to join
    // this cluster.
    //
    // It is required that the node that this is called into is a leader node.
    // Refer: the specific implementation for error codes
    rpc Join (JoinRequest) returns (Empty) {}

    // Leave, allows a calling node to leave the cluster.
    //
    // It is required that the node that this is called into is a leader node.
    // Refer: the specific implementation for error codes
    rpc Leave (LeaveRequest) returns (Empty) {}

    // IsNodeLeader, Check if this current node is a leader
    rpc IsNodeLeader (Empty) returns (IsNodeLeaderResponse) {}

    // Snaoshot, requests the server to return a user defined snapshot of
    // the specific node.
    rpc Snapshot (Empty) returns (Empty) {}
}

message JoinRequest {
    // Node ID of the node interested in joining
    string node_id = 1;

    // Address of the replica interested in joining
    string addr = 2;
}

message LeaveRequest {
    // Node ID of the node requested to leave
    string node_id = 1;
}

message IsNodeLeaderResponse {
    // is_leader is a boolean value indicating if this current node is a leader or not
    bool is_leader = 1;
}

